syntax = "proto3";

package listing;
option go_package = "github.com/carousell/aggproto/examples/goOut/listing";

message GetListingRequest {
    string listing_id = 1;
}

message Listing {
    string id = 1;
    string title = 2;
    string description = 3;
    string media_id = 4;
}

message GetListingResponse {
    Listing listing = 1;
}

service Listings {
    rpc GetListing (GetListingRequest) returns (GetListingResponse) {
    }
}